<resources>
    <string name="app_name">Nike</string>
    <string name="home_title">Discover</string>
    <string name="home_today">9월 4일 목요일</string>
    <string name="wish_title">위시리스트</string>
    <string name="cart_empty">장바구니가 비어 있습니다.\n제품을 추가하면 여기에 표시됩니다.</string>
    <string name="cart_order_button">주문하기</string>
    <string name="home_new">What\'s new</string>
    <string name="home_new_sub">나이키 최신 상품</string>
    <string name="item_new_name">Air Jordan XXXVI</string>
    <string name="item_new_price">US$185</string>
    <string name="item_purchase_name">Nike Everyday Plus Cushioned</string>
    <string name="item_purchase_detail">Traning Ankle Socks (6 Pairs)</string>
    <string name="item_purchase_colour">5 Colours</string>
    <string name="item_purchase_price">US$10</string>
    <string name="detail_goodsName">Name</string>
    <string name="detail_category">종류</string>
    <string name="detail_name">상품명</string>
    <string name="detail_price">가격</string>
    <string name="detail_explain">설명</string>
    <string name="view_product_details">View Product Details</string>
    <string name="detail_addCart_button">장바구니에 추가</string>
    <string name="detail_addWish_button">위시리스트</string>
    <string name="detail_selectSize_button">사이즈 선택</string>
    <string name="myPage_nickName">닉네임</string>
    <string name="myPage_profile_edit">프로필 수정</string>
    <string name="myPage_order">주문</string>
    <string name="myPage_pass">패스</string>
    <string name="myPage_event">이벤트</string>
    <string name="myPage_setting">설정</string>
    <string name="myPage_member_title">나이키 멤버 혜택</string>
    <string name="myPage_member_available">0개 사용 가능</string>
    <string name="myPage_following">팔로잉 (3)</string>
    <string name="myPage_signin">회원 가입일: 2025년 9월</string>
    <string name="myPage_following_edit">편집</string>
</resources>