<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detail_title_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="54dp">

                <ImageView
                    android:id="@+id/detail_title_back_IV"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_back"
                    android:padding="5dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/detail_title_goodsName_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_goodsName"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/detail_title_search_IV"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_magnifyingglass"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/detail_goods_IV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_jordan_xxxvi"

                app:layout_constraintTop_toBottomOf="@id/detail_title_LL"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"/>

            <LinearLayout
                android:id="@+id/detail_text_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/detail_goods_IV"

                android:layout_marginTop="35dp"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp">

                <TextView
                    android:id="@+id/detail_category_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_category"/>

                <TextView
                    android:id="@+id/detail_goodsName_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_name"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:id="@+id/detail_goodsPrice_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_price"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/detail_explain_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_explain"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_product_details"
                    android:layout_marginTop="30dp"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_selectSize_BT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_selectSize_button"
                android:drawableEnd="@drawable/icon_arrow_down"
                android:textAppearance="@style/button_white"
                android:background="@drawable/background_button"
                android:includeFontPadding="false"

                app:layout_constraintTop_toBottomOf="@id/detail_text_LL"

                android:layout_marginTop="35dp"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="43dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_addCart_BT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_addCart_button"
                android:textAppearance="@style/button_white"
                android:background="@drawable/background_button"
                android:includeFontPadding="false"

                app:layout_constraintTop_toBottomOf="@id/detail_selectSize_BT"

                android:layout_marginTop="20dp"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="43dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_addWish_BT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_addWish_button"
                android:drawableEnd="@drawable/icon_wish"
                android:textAppearance="@style/button_white"
                android:background="@drawable/background_button"
                android:includeFontPadding="false"

                app:layout_constraintTop_toBottomOf="@id/detail_selectSize_BT"
                android:layout_marginBottom="44dp"

                android:layout_marginTop="20dp"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="43dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>