<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/myPage_avatar_IV"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:src="@drawable/ic_avatar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="71dp"/>

    <TextView
        android:id="@+id/myPage_nickName_TV"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_nickName"
        android:textAppearance="@style/m20_black"
        android:includeFontPadding="false"

        app:layout_constraintTop_toBottomOf="@id/myPage_avatar_IV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myPage_profile_edit_BT"

        android:layout_width="180dp"
        android:layout_height="51dp"
        android:text="@string/myPage_profile_edit"
        android:gravity="center"
        android:textAppearance="@style/m16_black"
        android:includeFontPadding="false"
        android:background="@drawable/background_button_white"

        app:layout_constraintTop_toBottomOf="@id/myPage_nickName_TV"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/myPage_menu_LL"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/myPage_profile_edit_BT"
        android:layout_marginTop="43dp">

        <LinearLayout
            android:id="@+id/myPage_menu_order_LL"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_archive"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myPage_order"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/r12_black"
                android:includeFontPadding="false"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="31dp"
            android:background="#CDCDCD"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:id="@+id/myPage_menu_pass_LL"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_identificationcard"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myPage_pass"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/r12_black"
                android:includeFontPadding="false"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="31dp"
            android:background="#CDCDCD"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:id="@+id/myPage_menu_event_LL"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_calendarblank"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myPage_event"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/r12_black"
                android:includeFontPadding="false"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="31dp"
            android:background="#CDCDCD"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:id="@+id/myPage_menu_setting_LL"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_gear"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myPage_setting"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/r12_black"
                android:includeFontPadding="false"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/myPage_guideLine"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="#F6F6F6"
        app:layout_constraintTop_toBottomOf="@id/myPage_menu_LL"
        android:layout_marginTop="25dp"/>

    <FrameLayout
        android:id="@+id/myPage_nike_member_LL"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/myPage_guideLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myPage_member_title"
            android:textAppearance="@style/m16_black"
            android:includeFontPadding="false"

            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myPage_member_available"
            android:textAppearance="@style/r12_gray"
            android:includeFontPadding="false"

            android:layout_marginTop="57dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="center_vertical|end"

            android:layout_marginEnd="24dp"/>

    </FrameLayout>

    <View
        android:id="@+id/myPage_guideLine_2"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="#F6F6F6"
        app:layout_constraintTop_toBottomOf="@id/myPage_nike_member_LL"/>

    <TextView
        android:id="@+id/myPage_following_title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_following"
        android:textAppearance="@style/m14_black"
        android:includeFontPadding="false"


        app:layout_constraintTop_toBottomOf="@id/myPage_guideLine_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"/>

    <TextView
        android:id="@+id/myPage_following_edit_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_following_edit"
        android:textAppearance="@style/r12_gray"
        android:includeFontPadding="false"

        app:layout_constraintTop_toBottomOf="@id/myPage_guideLine_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="28dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myPage_following_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/myPage_following_title_TV"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/myPage_signin_banner"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/myPage_signin"
        android:textAppearance="@style/r12_gray"
        android:includeFontPadding="false"
        android:gravity="center"
        android:background="#F6F6F6"

        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>