<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/home_title_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="41dp"

        android:includeFontPadding="false"
        android:text="@string/home_title"
        android:textAppearance="@style/title"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_today_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"


        android:includeFontPadding="false"
        android:text="@string/home_today"
        android:textAppearance="@style/r16_gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title_TV" />

    <ImageView
        android:id="@+id/home_banner_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:src="@drawable/image_home_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/home_today_TV" />

    <TextView
        android:id="@+id/home_new_title_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"

        android:includeFontPadding="false"
        android:text="@string/home_new"
        android:textAppearance="@style/m16_black"
        app:layout_constraintTop_toBottomOf="@id/home_banner_TV" />

    <TextView
        android:id="@+id/home_new_subtitle_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="42dp"

        android:includeFontPadding="false"
        android:text="@string/home_new_sub"
        android:textAppearance="@style/title_gray"
        app:layout_constraintTop_toBottomOf="@id/home_new_title_TV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_new_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/home_new_subtitle_TV"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="221dp"
        app:layout_constraintTop_toBottomOf="@id/home_new_RV" />
</androidx.constraintlayout.widget.ConstraintLayout>